--- a/html/index.html
+++ b/html/index.html
@@ -18,10 +18,8 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Hi, I'm <strong>효자고등학교</strong>, another fine<br />
-					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
-					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
+					<a href="https://hyoja-h.goeujb.kr/hyoja-h/main.do"><h1><strong>효자고등학교</strong>에 오신것을 환영합니다!<br /></h1></a>
+					<p>홈페이지 만들기 실습</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
@@ -34,10 +32,11 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>분노의 강아지를 소개합니다.</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>해외 네티즌 사이에서 인기가 높은 강아지 모습이다. <br/>
+								표정이 재미있다. 두 가지 분위기이다. 험상궂은 표정인데 동시에 귀엽다. 화가 난 것 같은데 즐거움을 주는 얼굴이다. “까불지말고 빨리 안아줘!”라고 표정으로 말하는 것 같다. <br/>
+								분노 폭발 직전인데도 귀여운 이 강아지 사진은 미국의 유머 사이트 등에서 주목을 받고 있다. </p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -86,7 +85,7 @@
 							<h3>Magna feugiat lorem</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://www.naver.com" class="button">네이버</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -103,6 +102,14 @@
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<h3>나의 포트폴리오</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<ul class="actions special">
+								<li><a href="introduction.html" class="button">More</a></li>
 							</ul>
 						</div>
 					</div>
